<resources>
    <string name="app_name">HM Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="alternate_dimension">Alternate Dimension</string>
    <string name="song_name">Music Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00.00</string>
    <string name="end_tv">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="eq_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="add_btn">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">app</string>
    <string name="name">Developer \nHarsh Mishra</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Album</string>


</resources>